2000-06-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, commands.cc, lftp.cc: new setting
	  cmd:move-background; (Feeder::RealEOF) new method.
	* FileAccess.cc, FileAccess.h, Http.h, Http.cc, FileCopy.cc,
	  FileCopy.h: new setting xfer:max-redirections; redirection support;
	  in http code - check for 20X code before using size/date.

2000-06-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: use strncasecmp for special cookie checking; handle domain=.

2000-06-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopyFtp.cc, Fish.cc, Fish.h, FtpDirList.cc, FtpListInfo.cc,
	  HttpDir.cc, NetAccess.cc, ftpclass.h: use off_t in many places.

2000-06-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* GetJob.cc: new setting xfer:make-backup.

2000-06-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.cc: use 2*rate as default limit-max.

2000-06-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.cc, CopyJob.h, FileAccess.cc, FileAccess.h, FileCopy.cc,
	  FileCopy.h, FileSet.h, Filter.cc, Filter.h, Http.cc, Http.h,
	  LocalAccess.cc, Makefile.in, Speedometer.cc, Speedometer.h,
	  buffer.cc, buffer.h, ftpclass.cc, ftpclass.h, misc.cc, misc.h,
	  pgetJob.cc, pgetJob.h, plural.c, plural.h: large file size support.

2000-06-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: apply `;type=' to hftp urls too.
	* MirrorJob.cc: chmod files if needed before continuing download.
	* xmalloc.h: add alloca_strdup2 macro.
	* resource.cc: workaround IRIX CC and Unixware c++ bug by converting
	  array to plain variables. (debugged and workaround proposed by
	  Eugene Exarevsky <zheka@relex.ru>)

2000-06-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: better status line; quote more special symbols.
	* FileCopy.cc: fix positioning in FileCopyPeerFDStream.
	* FindJob.cc: change op in FinderJob_Cmd ctor.
	* Http.cc: don't pass user data as format, use %s.
	* Job.cc: fix kill all.