@@ -86,54 +86,57 @@ static const char *FtpDefaultAnonPass()
 // Static array of objects is wrongly initialized by IRIX CC and Unixware c++.
 // So here goes list of arbitrarily named objects, they are not refered by name.
 static ResDecl
-   ResDecl00("ftp:anon-pass",	       "-lftp@",0,0),
-   ResDecl01("ftp:anon-user",	       "anonymous",0,0),
-   ResDecl02("ftp:fxp-passive-source", "no",	ResMgr::BoolValidate,0),
-   ResDecl03("ftp:list-options",       "",0,0),
-   ResDecl04("ftp:nop-interval",       "120",	ResMgr::UNumberValidate,0),
-   ResDecl05("ftp:passive-mode",       "on",    ResMgr::BoolValidate,0),
-   ResDecl06("ftp:port-range",	       "full",	ResMgr::RangeValidate,0),
-   ResDecl07("ftp:proxy",	       "",	FtpProxyValidate,0),
-   ResDecl08("ftp:rest-list",	       "no",	ResMgr::BoolValidate,0),
-   ResDecl09("ftp:rest-stor",	       "yes",	ResMgr::BoolValidate,0),
-   ResDecl10("ftp:skey-allow",	       "yes",   ResMgr::BoolValidate,0),
-   ResDecl11("ftp:skey-force",	       "no",    ResMgr::BoolValidate,0),
-   ResDecl12("ftp:stat-interval",      "1",	ResMgr::UNumberValidate,0),
-   ResDecl13("ftp:sync-mode",	       "on",    ResMgr::BoolValidate,0),
-   ResDecl14("ftp:use-abor",	       "yes",   ResMgr::BoolValidate,0),
-   ResDecl15("ftp:use-fxp",	       "yes",   ResMgr::BoolValidate,0),
-   ResDecl16("ftp:use-stat",	       "yes",   ResMgr::BoolValidate,0),
-   ResDecl17("ftp:use-quit",	       "yes",	ResMgr::BoolValidate,0),
-   ResDecl18("ftp:verify-address",     "no",    ResMgr::BoolValidate,0),
-   ResDecl19("ftp:verify-port",	       "no",    ResMgr::BoolValidate,0),
-   ResDecl20("ftp:web-mode",	       "off",	ResMgr::BoolValidate,0),
-   ResDecl21("hftp:cache",	       "yes",	ResMgr::BoolValidate,0),
-   ResDecl22("hftp:proxy",	       "",	HttpProxyValidate,0),
-   ResDecl23("hftp:use-head",	       "yes",	ResMgr::BoolValidate,0),
-   ResDecl24("http:cache",	       "yes",	ResMgr::BoolValidate,0),
-   ResDecl25("http:proxy",	       "",	HttpProxyValidate,0),
-   ResDecl26("http:user-agent",	       PACKAGE"/"VERSION,0,0),
-   ResDecl27("http:cookie",	       "",	0,0),
-   ResDecl28("http:set-cookies",       "no",	0,0),
-   ResDecl29("http:put-method",	       "PUT",	0,0),
-   ResDecl30("http:put-content-type",  "",	0,0),
-   ResDecl31("net:idle",	       "180",   ResMgr::UNumberValidate,0),
-   ResDecl32("net:limit-max",	       "0",	ResMgr::UNumberValidate,0),
-   ResDecl33("net:limit-rate",	       "0",	ResMgr::UNumberValidate,0),
-   ResDecl34("net:limit-total-max",    "0",	ResMgr::UNumberValidate,0),
-   ResDecl35("net:limit-total-rate",   "0",	ResMgr::UNumberValidate,0),
-   ResDecl36("net:max-retries",	       "0",	ResMgr::UNumberValidate,0),
-   ResDecl37("net:no-proxy",	       "",	0,0),
-   ResDecl38("net:reconnect-interval-base","30",ResMgr::UNumberValidate,0),
-   ResDecl39("net:reconnect-interval-multiplier","1.5",ResMgr::FloatValidate,0),
-   ResDecl40("net:reconnect-interval-max","600",ResMgr::UNumberValidate,0),
-   ResDecl41("net:socket-buffer",      "0",	ResMgr::UNumberValidate,0),
-   ResDecl42("net:socket-maxseg",      "0",	ResMgr::UNumberValidate,0),
-   ResDecl43("net:timeout",	       "300",   ResMgr::UNumberValidate,0),
-   ResDecl44("net:connection-limit",   "0",	ResMgr::UNumberValidate,0),
-   ResDecl45("net:connection-takeover","yes",	ResMgr::BoolValidate,0),
-   ResDecl46("mirror:time-precision",  "1s",    ResMgr::TimeIntervalValidate,0),
-   ResDecl47("mirror:loose-time-precision","24h",ResMgr::TimeIntervalValidate,0);
+   ResDecl00 ("ftp:anon-pass",		  "-lftp@",0,0),
+   ResDecl01 ("ftp:anon-user",		  "anonymous",0,0),
+   ResDecl02 ("ftp:fxp-passive-source",	  "no",	   ResMgr::BoolValidate,0),
+   ResDecl03 ("ftp:list-options",	  "",	   0,0),
+   ResDecl04 ("ftp:nop-interval",	  "120",   ResMgr::UNumberValidate,0),
+   ResDecl05 ("ftp:passive-mode",	  "on",    ResMgr::BoolValidate,0),
+   ResDecl06 ("ftp:port-range",		  "full",  ResMgr::RangeValidate,0),
+   ResDecl07 ("ftp:proxy",		  "",	   FtpProxyValidate,0),
+   ResDecl08 ("ftp:rest-list",		  "no",	   ResMgr::BoolValidate,0),
+   ResDecl09 ("ftp:rest-stor",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl10 ("ftp:skey-allow",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl11 ("ftp:skey-force",		  "no",    ResMgr::BoolValidate,0),
+   ResDecl12 ("ftp:stat-interval",	  "1",	   ResMgr::UNumberValidate,0),
+   ResDecl13 ("ftp:sync-mode",		  "on",    ResMgr::BoolValidate,0),
+   ResDecl14 ("ftp:use-abor",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl15 ("ftp:use-fxp",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl16 ("ftp:use-stat",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl17 ("ftp:use-quit",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl18 ("ftp:verify-address",	  "no",    ResMgr::BoolValidate,0),
+   ResDecl19 ("ftp:verify-port",	  "no",    ResMgr::BoolValidate,0),
+   ResDecl20 ("ftp:web-mode",		  "off",   ResMgr::BoolValidate,0),
+   ResDecl21 ("hftp:cache",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl22 ("hftp:proxy",		  "",	   HttpProxyValidate,0),
+   ResDecl23 ("hftp:use-head",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl24a("http:accept",		  "*/*",   0,0),
+   ResDecl24b("http:accept-language",	  "",	   0,0),
+   ResDecl24c("http:accept-charset",	  "",	   0,0),
+   ResDecl24 ("http:cache",		  "yes",   ResMgr::BoolValidate,0),
+   ResDecl25 ("http:proxy",		  "",	   HttpProxyValidate,0),
+   ResDecl26 ("http:user-agent",	  PACKAGE"/"VERSION,0,0),
+   ResDecl27 ("http:cookie",		  "",	   0,0),
+   ResDecl28 ("http:set-cookies",	  "no",	   0,0),
+   ResDecl29 ("http:put-method",	  "PUT",   0,0),
+   ResDecl30 ("http:put-content-type",	  "",	   0,0),
+   ResDecl31 ("net:idle",		  "180",   ResMgr::UNumberValidate,0),
+   ResDecl32 ("net:limit-max",		  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl33 ("net:limit-rate",		  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl34 ("net:limit-total-max",	  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl35 ("net:limit-total-rate",	  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl36 ("net:max-retries",	  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl37 ("net:no-proxy",		  "",	   0,0),
+   ResDecl38 ("net:reconnect-interval-base","30",  ResMgr::UNumberValidate,0),
+   ResDecl39 ("net:reconnect-interval-multiplier","1.5",ResMgr::FloatValidate,0),
+   ResDecl40 ("net:reconnect-interval-max","600",  ResMgr::UNumberValidate,0),
+   ResDecl41 ("net:socket-buffer",	  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl42 ("net:socket-maxseg",	  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl43 ("net:timeout",		  "300",   ResMgr::UNumberValidate,0),
+   ResDecl44 ("net:connection-limit",	  "0",	   ResMgr::UNumberValidate,0),
+   ResDecl45 ("net:connection-takeover",  "yes",   ResMgr::BoolValidate,0),
+   ResDecl46 ("mirror:time-precision",	  "1s",    ResMgr::TimeIntervalValidate,0),
+   ResDecl47 ("mirror:loose-time-precision","24h", ResMgr::TimeIntervalValidate,0);
 
 void ResMgr::ClassInit()
 {
